ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8s-monitor
  namespace: k8s-monitor

spec:
  ingressClassName: traefik

  rules:

    - host: dashboard.yourdomain.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 80

    - host: api.yourdomain.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend

                port:
                  number: 3000
